# rust-litex

./: Cargo.toml  Makefile  README.md  memory.x  rust.py
.cargo/: config
src/: main.rs
