[package]
name = "litex"
version = "0.1.0"
authors = ["Tom Vijlbrief <tvijlbrief@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#embedded-hal = "0.2.3"
#panic-halt = "0.2.0"
riscv = "0.5.3"
riscv-rt = { git = "https://github.com/tomtor/riscv-rt", branch = "litex" }
linked_list_allocator = "0.6"
#heapless = "0.5.1"

# this lets you use `cargo fix`!
[[bin]]
name = "litex"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
